<resources>
    <string name="app_name">Pajak Medan</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_chooseFromGallery_text">Pilih dari gallery</string>
    <string name="btn_uploadFile">Upload File</string>
    <string name="txtVw_buatAkun">Buat akun</string>
    <string name="edtTxt_nama">Nama</string>
    <string name="edtTxt_email">Email</string>
    <string name="edtTxt_noHp">Nomor telepon</string>
    <string name="btn_daftar">REGISTER</string>
    <string name="edtTxt_confirmPassword">Konfirmasi password</string>
    <string name="silahkan_buat_akum">Silahkan buat akun</string>
    <string name="gunakan_akun">Gunakan akun</string>
    <string name="register_butuhBantuan">Perlu bantuan untuk register? </string>
    <string name="contact_us">HUBUNGI KAMI</string>
    <string name="btn_google">GOOGLE</string>
    <string name="btn_facebook">FACEBOOK</string>
    <string name="txtVw_punyaAkun">Punya akun?</string>
    <string name="txtVw_masuk">SIGN IN</string>
    <string name="txtVw_gunakanAkunTerdaftar">Silahkan gunakan akun yang sudah ada</string>
    <string name="txtVw_register">REGISTER</string>
    <string name="txtVw_register_belumPunyaAkun">Belum punya akun?</string>
    <string name="facebook_app_id">159800427983228</string>
    <string name="fb_login_protocol_scheme">fb159800427983228</string>
    <string name="title_activity_testing_drawer">TestingDrawer</string>
    <string name="navigation_drawer_open">Buka navigation drawer</string>
    <string name="navigation_drawer_close">Tutup navigation drawer</string>
    <string name="action_settings">Pengaturan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="keranjang_belanja">Keranjang</string>
    <string name="wishlist">Wishlist</string>
    <string name="riwayat_pemesanan">Riwayat Pemesanan</string>
    <string name="open">Buka</string>
    <string name="close">Tutup</string>
    <string name="cari_barang">Cari barang…</string>
    <string name="logout">Logout</string>
    <string name="konfirmasi_password">Konfirmasi password harus sesuai</string>
    <string name="field_tidak_boleh_kosong">Silahkan isi semua kolom</string>
    <string name="informasi_produk">Informasi Produk</string>
    <string name="satuan">Satuan</string>
    <string name="min_pemesanan">Pemesanan Minimal</string>
    <string name="kondisi">Kondisi</string>
    <string name="kategori">Kategori</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beli">Beli</string>
    <string name="tersedia">Tersedia</string>
    <string name="tidak_tersedia">Kosong</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="keranjang_belanjaan">Keranjang Belanjaan</string>
    <string name="lanjut_pembayaran">Lanjutkan Pembayaran</string>
    <string name="ingin_keluar">Anda yakin ingin keluar?</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="nomor_rekening">Nomor Rekening :</string>
    <string name="cek_transfer">Klik tombol dibawah setelah anda melakukan transfer</string>
    <string name="periksa_transfer">Periksa transfer</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="pilih_pembayaran">Anda memilih pembayaran menggunakan</string>
    <string name="lanjutkan">Lanjutkan?</string>
    <string name="alamat_tujuan">Alamat tujuan pengiriman</string>
    <string name="gunakan_alamat_lain">Gunakan alamat lain</string>
    <string name="buat_alamat_baru">Buat alamat baru</string>
    <string name="tambah_ke_keranjang">Tambah ke keranjang</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_total">Harga total</string>
    <string name="biaya_pengiriman">Biaya pengiriman</string>
    <string name="total_pembayaran">Total pembayaran</string>
    <string name="data_penerima">Data Penerima</string>
    <string name="lihat_profile">Lihat profile</string>
    <string name="registrasi_berhasil">Registrasi berhasil</string>
    <string name="registrasi_username_atau_email_terpakai">Registrasi gagal, email atau username sudah terpakai</string>
    <string name="registrasi_gagal">Registrasi gagal</string>
    <string name="login_gagal">Login gagal, akun sudah terpakai</string>
    <string name="barang_ditambahakan_ke_keranjang">Barang ditambahkan ke keranjang</string>
    <string name="profile">Profile</string>
    <string name="edit_alamat">Edit alamat</string>
    <string name="alamat">Alamat</string>
    <string name="gunakan_profile_lain">Gunakan profile lain</string>
    <string name="bust_profile">Buat profile</string>
    <string name="tidak_ada_alamat_utama">tidak ada alamat utama</string>
    <string name="ubah_profile">Edit Profile</string>
    <string name="tambah_alamat">Tambah alamat</string>
    <string name="selesai">Selesai</string>
    <string name="lengkapi_profile">Lengkapi profile</string>
    <string name="utama">Utama</string>
    <string name="yakin_ingin_hapus">Yakin ingin hapus?</string>
    <string name="berhasil_diedit">Edit berhasil</string>
    <string name="gagal_diedit">Edit gagal</string>
    <string name="berhasil_hapus">Berhasil dihapus</string>
    <string name="gagal_hapus">Gagal dihapus</string>
    <string name="berhasil_ditambah">Berhasil ditambahkan</string>
    <string name="gagal_ditambah">Gagal ditambahkan</string>
    <string name="mulai_belanja">Mulai Belanja</string>
    <string name="barang">barang</string>
    <string name="lihat_barang">Lihat barang</string>
    <string name="barang_pesanan">Barang pesanan</string>
    <string name="kadaluarsa">Kadaluarsa</string>
    <string name="menunggu">Menunggu</string>
    <string name="gagal">Gagal</string>
    <string name="berhasil">Berhasil</string>
    <string name="tipe_otentikasi_tidak_boleh">Tipe otentikasi tidak diperbolehkan</string>
    <string name="password_salah">Password salah</string>
    <string name="berhasil_checkout">Berhasil melakukan checkout</string>
    <string name="gagal_checkout">Gagal melakukan checkout</string>
    <string name="checkout_gagal_expired">Checkout gagal atau expired</string>
    <string name="tidak_ada_no_telepon">tidak ada nomor telepon</string>
    <string name="barang_gagal_ditambahkan">Barang gagal ditambahkan ke keranjang</string>
</resources>