<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_deleteAddress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/yakin_ingin_hapus"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/button_deleteAddress_yes"
        app:layout_constraintEnd_toStartOf="@id/button_deleteAddress_yes"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_deleteAddress_no"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:background="#00000000"
        android:text="@string/tidak"
        android:textColor="@color/colorButton"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/button_deleteAddress_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_deleteAddress_yes" />

    <Button
        android:id="@+id/button_deleteAddress_yes"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:text="@string/ya"
        android:textColor="@color/colorButton"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_deleteAddress_no"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/textView_deleteAddress_text"
        app:layout_constraintTop_toBottomOf="@id/textView_deleteAddress_text" />

</android.support.constraint.ConstraintLayout>